<resources>
    <string name="app_name">Ayaa Cookies Sale</string>
    <string name="divider">Divider</string>
    <string name="add_sales">Add Sales</string>
    <string name="nama_kue">Nama Kue</string>
    <string name="harga_kue">Harga Kue</string>
    <string name="kuantitas_kue">Kuantitas Kue (kg, gram, dll)</string>
    <string name="deskripsi_kue">Deskripsi Kue</string>
    <string name="tambahkan_kue">Tambahkan Kue</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>